Revision history for MS

0.207002 2022-03-02
        Allow NME in protein digests
        Only check mzML sha256 if present

0.207001 2022-02-24
        Update ontologies

0.207 2020-11-03
        Update ontologies

0.206003 2020-06-11
        Fix bug in test suite floating point equality testing causing failed tests on Perls compiled with -Duselongdouble

0.206002 2020-06-10
        Add additional atomic mass data from PubChem (Unimod only includes a subset of elements)

0.206001 2020-06-03
        Fix edge case bug triggered by very short Numpress linear arrays
        Change imported uniq() to List::MoreUtils to pacify older perls

0.206 2020-06-02
        Fix bugs in param() method of MS::Reader::XML::CV and add testing
        Add params() method to MS::Reader::XML::CV

0.205 2020-06-01
        Add deduplicate() to MS::Search::DB

0.204003 2020-02-18
        Fix too-early binary mode setting with add_from_url()
        Add tests for MS::Search::DB

0.204002 2020-02-13
        Fix ImzML SHA-1 hashing on Windows (use binary mode)
        Use 'any' from List::MoreUtils to satisfy pre-5.20 perls

0.204001 2019-09-20
        Yet another attempt to address versioning inconsistency

0.204   2019-09-20
        Un-fix versioning regression issue -- use same version for all modules

0.008002 2019-09-20
        Fix inconsistent versioning between modules
        Fix missing return value in MS::Reader::MzXML

0.008001 2019-09-20
        Fixed missing List::MoreUtils dependency in Build.PL

0.008    2019-09-18
        Fixed incomplete parsing of MzIdentML SequenceCollection children
        Full POD coverage, added pod-coverage.t

0.007    2019-09-18
        Numerous minor tweaks and fixes
        Increased test coverage

0.006    2019-07-09
        Add 'include_isoforms' option to MS::Search::DB::Source::uniprot

0.005    2019-01-09
        MS::Protein now a subclass of MS::Peptide
        Use range() to subset peptides while preserving modifications