@@ -3,6 +3,7 @@ Revision history for MS
 0.207002 2022-03-02
         Allow NME in protein digests
         Only check mzML sha256 if present
+        Fix bug when multi-result types (PepXML, MzIdentML) are iterated without explicitly setting list
 
 0.207001 2022-02-24
         Update ontologies
